--- a/C++_sch_Project/CMakeLists.txt
+++ b/C++_sch_Project/CMakeLists.txt
@@ -3,7 +3,7 @@ project(C___sch_Project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(C___sch_Project main.cpp)
+add_executable(C___sch_ProjectSNAKE_for_Window/main.cpp)
 
 find_package(Curses REQUIRED)
 include_directories(${CURSES_INCLUDE_DIRS})
