--- a/C++_sch_Project/CMakeLists.txt
+++ b/C++_sch_Project/CMakeLists.txt
@@ -3,7 +3,7 @@ project(C___sch_Project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(C___sch_Project Main/main.cpp)
+add_executable(C___sch_Project Main/main.cpp Main/TETRIS/main_for_tetris.h Main/TETRIS/kbhit.h Main/HANG_MAN/main_for_hangman.h)
 
 find_package(Curses REQUIRED)
 include_directories(${CURSES_INCLUDE_DIRS})
